// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly | Me 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="ChallengeMemberItemButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 8,
          "elevation": 6,
          "marginVertical": 4,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": Object {
            "height": 6,
            "width": 4,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": 750,
          },
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "column",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#007398",
                  "fontSize": 16,
                },
              ]
            }
          >
            Me
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ],
              ]
            }
          >
            Joined 
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ]
              }
              testID="Text"
            >
              Wednesday
            </Text>
          </Text>
        </View>
        <Image
          source={null}
          style={
            Object {
              "marginRight": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders completed item correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="ChallengeMemberItemButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 8,
          "elevation": 6,
          "marginVertical": 4,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": Object {
            "height": 6,
            "width": 4,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": 750,
          },
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "column",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#007398",
                  "fontSize": 16,
                },
              ]
            }
          >
            Me
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ],
              ]
            }
          >
            Completed 
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ]
              }
              testID="Text"
            >
              Wednesday
            </Text>
          </Text>
        </View>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/challengeCompleteGreen.png",
            }
          }
          style={
            Object {
              "marginRight": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly | Not Me 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="ChallengeMemberItemButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 8,
          "elevation": 6,
          "marginVertical": 4,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": Object {
            "height": 6,
            "width": 4,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": 750,
          },
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "column",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#007398",
                  "fontSize": 16,
                },
              ]
            }
          >
            Christian Huffman
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ],
              ]
            }
          >
            Joined 
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ]
              }
              testID="Text"
            >
              Wednesday
            </Text>
          </Text>
        </View>
        <Image
          source={null}
          style={
            Object {
              "marginRight": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders full date if not in same week 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="ChallengeMemberItemButton"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 8,
          "elevation": 6,
          "marginVertical": 4,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": Object {
            "height": 6,
            "width": 4,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 16,
            "width": 750,
          },
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "column",
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#007398",
                  "fontSize": 16,
                },
              ]
            }
          >
            Me
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ],
              ]
            }
          >
            Joined 
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B4B6BA",
                    "fontSize": 12,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, February 22, 2020
            </Text>
          </Text>
        </View>
        <Image
          source={null}
          style={
            Object {
              "marginRight": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
